crates/pixtuoid/tests/snapshots/layout_golden__desks_192x160.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 48
expression: l.home_desks
---
[
    Point {
        x: 68,
        y: 67,
    },
    Point {
        x: 92,
        y: 67,
    },
    Point {
        x: 68,
        y: 85,
    },
    Point {
        x: 92,
        y: 85,
    },
    Point {
        x: 68,
        y: 119,
    },
    Point {
        x: 92,
        y: 119,
    },
    Point {
        x: 68,
        y: 137,
    },
    Point {
        x: 92,
        y: 137,
    },
]
