crates/pixtuoid/tests/snapshots/layout_golden__desks_dense_seed6.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 102
expression: l.home_desks
---
[
    Point {
        x: 82,
        y: 67,
    },
    Point {
        x: 106,
        y: 67,
    },
    Point {
        x: 82,
        y: 85,
    },
    Point {
        x: 106,
        y: 85,
    },
]
