crates/pixtuoid/tests/snapshots/layout_golden__desks_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 75
expression: l.home_desks
---
[
    Point {
        x: 71,
        y: 53,
    },
    Point {
        x: 95,
        y: 53,
    },
    Point {
        x: 71,
        y: 71,
    },
    Point {
        x: 95,
        y: 71,
    },
]
