crates/pixtuoid/tests/snapshots/layout_golden__meeting_dense_seed6.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 114
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 48,
        width: 67,
        height: 56,
    },
)
