crates/pixtuoid/tests/snapshots/layout_golden__meeting_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 87
expression: l.meeting_room
---
Some(
    Bounds {
        x: 0,
        y: 36,
        width: 56,
        height: 42,
    },
)
