crates/pixtuoid/tests/snapshots/layout_golden__pantry_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 40
expression: l.pantry_room
---
Some(
    Bounds {
        x: 0,
        y: 46,
        width: 26,
        height: 26,
    },
)
